atualizacao para one page

--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
                     <a href="listaPresentes.html"> <img src="src/img/iconessLista.png" width="54%" alt=""></a>
                 </div>
                 <div class="menu col "><!--class="iconePresenca" -->
-                    <a href="confirmarpresenca.html"> <img src="src/img/iconessConfirme2.png" width="55%" alt=""></a>
+                    <a href="confirmarpresencaahtml"> <img src="src/img/iconessConfirme2.png" width="55%" alt=""></a>
                 </div>
                 <div class="menu col "><!--lass="iconessLocalizacao" -->
-                    <a href="localizacao.html"> <img c src="src/img/iconessLocalizacao.png" width="55%" alt=""></a>
+                    <a href="localizacaoohtml"> <img c src="src/img/iconessLocalizacao.png" width="55%" alt=""></a>
                 </div>
             </div>
         </div>
