teste v2 nao finalizado

--- a/index.html
+++ b/index.html
@@ -414,14 +414,25 @@
        <!--Controles de áudio -->
         <div id="music-controls">
            <!-- <button id="play-button">Play</button>-->
-            <button id="pause-button">Som</button>
-            <audio id="audio-player" preload="auto" loop>
-                <!-- Adicione as músicas aqui -->
-                <source src="/src/media/1.mp3" type="audio/mpeg">
-                <source src="/src/media/2.mp3" type="audio/mpeg">
-                <source src="/src/media/3.mp3" type="audio/mpeg">
-                Seu navegador não suporta o elemento de áudio.
-            </audio>
+           <button id="pause-button">ok</button>
+            <div id="animated_div">
+ 
+                <i class="som animated_div"><img class="som" src="/src/img/cd_music_love_song.svg" width="30px">
+                    <div id="music-controls">
+                        <!-- <button id="play-button">Play</button>-->
+                        <audio controls id="audio-player" autoplay>
+                            <!-- Adicione as músicas aqui -->
+                            <source src="/src/media/1.mp3" type="audio/mpeg">
+                            <source src="/src/media/2.mp3" type="audio/mpeg">
+                            <source src="/src/media/3.mp3" type="audio/mpeg">
+                            Seu navegador não suporta o elemento de áudio.
+                        </audio>
+
+
+                       
+                    </div> <!--Controles de áudio -->
+                </i></button>
+
         </div>
 
         <img class="nomes" src="src/img/nomesTrasparente.PNG" width="80%" alt="">
