correcao pasta de /src/ para src/

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/src/img/icone.PNG" type="image/x-icon">
+    <link rel="icon" href="src/img/icone.PNG" type="image/x-icon">
     <title> Convite de Casamento | B&N</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/sobre.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/sobre.css">
 
-    <link rel="stylesheet" href="/src/css/responsividade.css">
-    <link rel="stylesheet" href="/src/css/music.css">
-    <link rel="stylesheet" href="/src/css/form.css">
-    <link rel="stylesheet" href="/css/fontes.css">
+    <link rel="stylesheet" href="src/css/responsividade.css">
+    <link rel="stylesheet" href="src/css/music.css">
+    <link rel="stylesheet" href="src/css/form.css">
+    <link rel="stylesheet" href="src/css/fontes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/src/css/divisoria.css">
-    <link rel="stylesheet" href="/src/css/timeline.css">
-    <link rel="stylesheet" href="/src/css/responsividade.css">
-    <link rel="stylesheet" href="/src/css/efeitos.css">
+    <link rel="stylesheet" href="src/css/divisoria.css">
+    <link rel="stylesheet" href="src/css/timeline.css">
+    <link rel="stylesheet" href="src/css/responsividade.css">
+    <link rel="stylesheet" href="src/css/efeitos.css">
 
 
 
@@ -55,7 +55,7 @@
     <div class="navbar row col-12 ">
 
         <div class="navbar">
-            <img class="iconNb" src="/src/img/icone.PNG" alt="bn">
+            <img class="iconNb" src="src/img/icone.PNG" alt="bn">
             <a href="#about">Sobre</a>
             <a href="#presente">Lista de Presentes</a>
             <a href="#contact">Contato</a>
@@ -65,12 +65,12 @@
     <div class="row">
 
         <div id="animated_div" id="music-controls">
-            <!-- <i class="animated_div"><img class="som" src="/src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
+            <!-- <i class="animated_div"><img class="som" src="src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
             <audio controls id="audio-player autoplay">
                 <!-- Adicione as músicas aqui -->
-                <source src="/src/media/2.mp3" type="audio/mpeg">
-                <source src="/src/media/1.mp3" type="audio/mpeg">
-                <source src="/src/media/3.mp3" type="audio/mpeg">
+                <source src="src/media/2.mp3" type="audio/mpeg">
+                <source src="src/media/1.mp3" type="audio/mpeg">
+                <source src="src/media/3.mp3" type="audio/mpeg">
                 Seu navegador não suporta o elemento de áudio.
             </audio>
 
@@ -231,7 +231,7 @@
             </div>
 
             <video width="100%" height="auto" autoplay controls loop>
-                <source src="/src/media/Cópia de som vogais.mp4" type="video/mp4">
+                <source src="src/media/Cópia de som vogais.mp4" type="video/mp4">
                 Seu BroYour browser does not support the video tag.
             </video>
         </div>
@@ -265,7 +265,7 @@
                             <img class="pixcode" src="src/img/qrLPresente.PNG" width="50%" alt="">
                 </div>
                 <br><br>
-                <div class="row divisoria">                <img class="divisorias2" src="/src/img/agenda/divisoria.PNG" alt="">
+                <div class="row divisoria">                <img class="divisorias2" src="src/img/agenda/divisoria.PNG" alt="">
                 </div>
 
                 <div class="row">
@@ -291,7 +291,7 @@
 
                         <img class="nomes col" width="150px" src="src/img/nossaLista.PNG" alt="">
 
-                        <img class="flormeiomenor" src="/src/img/flor5MeioDir.png" alt="">
+                        <img class="flormeiomenor" src="src/img/flor5MeioDir.png" alt="">
                     </div>
                     <!--Mercado livre-->
                     <iframe src="https://www.mercadolivre.com.br/presentes/presentes-de-casamento-oc8ty" border="0"
@@ -316,9 +316,9 @@
 
             <div class="row">
 
-                <img class="floralname" src="/src/img/agenda/agenda horarios.PNG" alt="">
+                <img class="floralname" src="src/img/agenda/agenda horarios.PNG" alt="">
 
-                <img class="divisorias2" src="/src/img/agenda/divisoria.PNG" alt="">
+                <img class="divisorias2" src="src/img/agenda/divisoria.PNG" alt="">
 
             </div>
 
@@ -327,42 +327,42 @@
                 <div class="agenda left">
                     <div class="content">
                         <div class="img-agenda cerimonia">
-                            <img src="/src/img/agenda/1-cerimônia.PNG" alt="Cerimonia">
+                            <img src="src/img/agenda/1-cerimônia.PNG" alt="Cerimonia">
                         </div>
                     </div>
                 </div>
                 <div class="agenda right ">
                     <div class="content">
                         <div class="img-agenda brinde">
-                            <img src="/src/img/agenda/2-brinde.PNG" alt="brinde">
+                            <img src="src/img/agenda/2-brinde.PNG" alt="brinde">
                         </div>
                     </div>
                 </div>
                 <div class="agenda left ">
                     <div class="content">
                         <div class="img-agenda fotos">
-                            <img src="/src/img/agenda/3-fotos.PNG" alt="fotos">
+                            <img src="src/img/agenda/3-fotos.PNG" alt="fotos">
                         </div>
                     </div>
                 </div>
                 <div class="agenda right">
                     <div class="content">
                         <div class="img-agenda almoco">
-                            <img src="/src/img/agenda/4-almoço.PNG" alt="almoco">
+                            <img src="src/img/agenda/4-almoço.PNG" alt="almoco">
                         </div>
                     </div>
                 </div>
                 <div class="agenda left">
                     <div class="content">
                         <div class="img-agenda festa">
-                            <img src="/src/img/agenda/5-festa.PNG" alt="festa">
+                            <img src="src/img/agenda/5-festa.PNG" alt="festa">
                         </div>
                     </div>
                 </div>
                 <div class="agenda right">
                     <div class="content">
                         <div class="img-agenda bolo">
-                            <img src="/src/img/agenda/6-bolo.PNG" alt="bolo">
+                            <img src="src/img/agenda/6-bolo.PNG" alt="bolo">
                         </div>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
             <p>Detalhes de contato.</p>
             <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
 
-            <img class="dataCasamento" src="/src/img/confirmarPresenca.PNG" width="100%" alt="">
+            <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="">
 
             <div class="col-12 col-s-12">
 
@@ -519,10 +519,10 @@
 
         </footer>
 
-        <script src="/src/js/time.js"></script>
-        <script src="/src/js/musica.js"></script>
-        <script src="/src/js/formPos.js"></script>
-        <script src="/src/js/formGet.js"></script>
+        <script src="src/js/time.js"></script>
+        <script src="src/js/musica.js"></script>
+        <script src="src/js/formPos.js"></script>
+        <script src="src/js/formGet.js"></script>
 </body>
 
 </html>
