--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <title> Convite de Casamento | B&N</title>
 
-    <style>
+   <!-- <style>
         audio#audio-player\ autoplay {
             height: 25px;
         }
@@ -48,7 +48,7 @@
         .col-6.leftflor5MeioEsq {
             padding: 0;
         }
-    </style>
+    </style>-->
 </head>
 
 <body>
@@ -66,7 +66,7 @@
 
         <div id="animated_div" id="music-controls">
             <!-- <i class="animated_div"><img class="som" src="src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
-            <audio controls id="audio-player autoplay loop">
+            <audio controls autoplay loop id="audio-player ">
                 <!-- Adicione as músicas aqui -->
                 <source src="src/media/1.mp3" type="audio/mp3">
                 <source src="src/media/2.mp3" type="audio/mp3">
