--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <a href="#about">Sobre</a>
             <a href="#presente">Lista de Presentes</a>
             <a href="#contact">Presença</a>
+            <a href="#local">Local</a>
+
 
         </div>
     </div>
@@ -105,7 +107,7 @@
         </div>
 
 
-        <img class="floralname" src="src/img/flor5Meio.png" width="100%" alt="">
+        <img class="floralname1" src="src/img/flor5Meio.png" width="100%" alt="">
 
 
 
