--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
             <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
         <!-- Localização Maps-->
 
-        <div id="local" class="row">
+        <div class="row">
 
             <!--Titulo Localizacao-->
 
-            <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
+            <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt="" id="local"></a>
             <img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">
 
 
