--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
 
 
         <!--Confirmar Presença-->
-        <div id="contact">
+        <div >
             <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
 
-            <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="">
+            <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="" id="contact">
 
             <div class="col-12 col-s-12">
 
