--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#about">Sobre</a>
             <a href="#presente">Lista de Presentes</a>
             <a href="#contact">Presença</a>
-            <a href="#local">Local</a>
+          <!--  <a href="#local">Local</a>-->
 
 
         </div>
