--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
 
         </div>
     </div>
+    <img class="floral" src="src/img/floral2.png" alt="">
+
     <div class="row">
 
         <div id="animated_div" id="music-controls">
             <!-- <i class="animated_div"><img class="som" src="src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
-            <audio controls autoplay loop id="audio-player ">
+            <audio controls id="audio-player" autoplay loop>
                 <!-- Adicione as músicas aqui -->
+                <source src="src/media/3.mp3" type="audio/mp3">
+
                 <source src="src/media/1.mp3" type="audio/mp3">
                 <source src="src/media/2.mp3" type="audio/mp3">
-                <source src="src/media/3.mp3" type="audio/mp3">
                 Seu navegador não suporta o elemento de áudio.
             </audio>
 
@@ -83,9 +86,9 @@
     </div> <!--Controles de áudio -->
 
     <div class="row col-12">
-        <div class="row left">
+       <!-- <div class="row left">
             <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
-        </div>
+        </div>-->
         <!--<div class="col-6 leftflor5MeioEsq">
             <img class="zoom-img" src="src/img/flor5MeioEsq.png" alt="Flor Esquerda">
         </div>
@@ -229,7 +232,7 @@
         <br><br>
         <img class="zoom-img" src="src/img/flor5MeioDir.png" alt="Flor Esquerda">
         <br><br>
-   
+   <!-- retirando o save date
         <div class="video col-12" width="100%">
             <div class="row col-12">
                 <div class="col-12 col-12">
@@ -238,14 +241,14 @@
             </div>
 
             <video width="100%" height="auto" controls loop>
-                <!--<video width="100%" height="auto" autoplay controls loop>  AUTOPLAY  --> 
+                <--<video width="100%" height="auto" autoplay controls loop>  AUTOPLAY  -> 
 
                 <source src="src/media/Cópia de som vogais.mp4" type="video/mp4">
                 Seu BroYour browser does not support the video tag.
             </video>
         </div>
         <br><br>
-    </div>
+    </div> -->
 
     <section class="fotos">
 
