--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 
         </div>
     </div>
-    <img class="floral" src="src/img/floral2.png" alt="">
 
     <div class="row">
 
@@ -86,10 +85,14 @@
     </div> <!--Controles de áudio -->
 
     <div class="row col-12">
-       <!-- <div class="row left">
+        
+       <div class="row left">
             <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
-        </div>-->
-        <!--<div class="col-6 leftflor5MeioEsq">
+        </div>
+        <!--
+           antigo <img class="floral" src="src/img/floral2.png" alt="">
+
+        <div class="col-6 leftflor5MeioEsq">
             <img class="zoom-img" src="src/img/flor5MeioEsq.png" alt="Flor Esquerda">
         </div>
           <div class="col-4 meio">
