--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div id="animated_div" id="music-controls">
             <!-- <i class="animated_div"><img class="som" src="src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
-            <audio controls id="audio-player" autoplay loop>
+            <audio controls autoplay  id="audio-player" loop>
                 <!-- Adicione as músicas aqui -->
                 <source src="src/media/3.mp3" type="audio/mp3">
 
