--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 
         <div id="animated_div" id="music-controls">
             <!-- <i class="animated_div"><img class="som" src="src/img/cd_music_love_song.svg" width="30px"></i> <button id="play-button">Play</button>-->
-            <audio controls autoplay  id="audio-player" loop>
+            <audio controls autoplay loop id="audio-player" >
                 <!-- Adicione as músicas aqui -->
                 <source src="src/media/3.mp3" type="audio/mp3">
-
                 <source src="src/media/1.mp3" type="audio/mp3">
                 <source src="src/media/2.mp3" type="audio/mp3">
                 Seu navegador não suporta o elemento de áudio.
