--- a/index.html
+++ b/index.html
@@ -365,6 +365,15 @@
                         </div>
                     </div>
                 </div>
+
+                 <div class="agenda left">
+                    <div class="content">
+                         <div class="img-agenda bolo">
+                            <img src="src/img/agenda/6-bolo.PNG" alt="bolo">
+                        </div>
+                    </div>
+                </div>
+              <!-- Tirando timrlinr de festa...
                 <div class="agenda left">
                     <div class="content">
                         <div class="img-agenda festa">
@@ -372,13 +381,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="agenda right">
+                -->
+              <!-- Bolo
+                <div class="agenda right">  
                     <div class="content">
                         <div class="img-agenda bolo">
                             <img src="src/img/agenda/6-bolo.PNG" alt="bolo">
                         </div>
                     </div>
-                </div>
+                </div> 
+                -->
             </div>
 
         </div>
