nossaHistoria link sobre

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="navbar">
             <img class="iconNb" src="src/img/icone.PNG" alt="bn">
-            <a href="#about">Sobre</a>
+            <a href="#nossaHistoria">Sobre</a>
             <a href="#presente">Lista de Presentes</a>
             <a href="#contact">Presença</a>
           <!--  <a href="#local">Local</a>-->
@@ -200,7 +200,7 @@
             <div class="col-12 col-12">
 
                 <h1>Nossa História</h1>
-                <p class="nossaHistoria">
+                <p class="nossaHistoria" id="nossaHistoria">
 
                     Em uma tarde comum, nossos caminhos se cruzaram de forma inesperada. O que começou como uma simples
                     conversa
