--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
     </div>
 
     <div id="about">
-        <div class="row col-12">
+        <div class="row col-12" id="nossaHistoria">
             <div class="col-12 col-12">
 
                 <h1>Nossa História</h1>
-                <p class="nossaHistoria" id="nossaHistoria">
+                <p class="nossaHistoria" >
 
                     Em uma tarde comum, nossos caminhos se cruzaram de forma inesperada. O que começou como uma simples
                     conversa
